# agenda-api

./: .gitignore  pyproject.toml
agenda_api/: app.py
agenda_api/adapters/: base.py  orm.py  repositories.py
agenda_api/domain/: __init__.py  errors.py  models.py
agenda_api/resources/: clients.py  employees.py  services.py
agenda_api/services/: commands.py  errors.py  handlers.py  unitofwork.py
tests/: conftest.py  test_agenda_api.py
tests/integration/: test_api.py  test_services.py
tests/unit/: test_domain.py  test_orm.py  test_repositories.py
