[tool.poetry]
name = "agenda-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.42"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
